LPS-116474 support html for card subtitle

--- a/packages/clay-card/package.json
+++ b/packages/clay-card/package.json
@@ -56,5 +56,6 @@
   },
   "browserslist": [
     "extends browserslist-config-clay"
-  ]
+  ],
+  "gitHead": "e9332761f890fdebfc35d311a1476099c191715c"
 }
